# GSH

./: CMakeLists.txt  README.md  compile.sh
executable/: gsh
include/: builtin.h  color.h  gsh.h  prompt.h  read.h  run.h
source/: .ycm_extra_conf.py  builtin.c  gsh.c  prompt.c  read.c  run.c
